[package]
name = "fsx-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
quick-xml = { version = "0.23.0", features = ["serde", "serialize"] }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["serde_derive"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
